--- a/android-engineer.html
+++ b/android-engineer.html
@@ -133,11 +133,11 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999697995659-sr-android-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Android Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999697995659-sr-android-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Android Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930260'>Job Application for Senior Android Engineer (Enterprise Security) at Pango Inc. </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930260'>Job Application for Senior Android Engineer (Enterprise Security) at Pango Inc. </a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -145,7 +145,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/'>Android Software Engineer - Permutive</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/'>Android Software Engineer - Permutive</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -251,7 +251,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341092-senior-android-engineer-m-f-d-nis'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Ni? | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341092-senior-android-engineer-m-f-d-nis'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Ni? | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -282,7 +282,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Paris  Paris Berlin</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://general-ui.breezy.hr/p/6aae2afa672b-senior-android-consulting-engineer'>Senior Android Consulting Engineer at GenUI</a></h5> 
+<h5><a href='https://general-ui.breezy.hr/p/6aae2afa672b-senior-android-consulting-engineer'>Senior Android Consulting Engineer at GenUI</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -342,7 +342,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rocketinsights/jobs/4396637002'>Job Application for Android Engineers (All levels)  at Rocket Insights</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rocketinsights/jobs/4396637002'>Job Application for Android Engineers (All levels)  at Rocket Insights</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -350,7 +350,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581879'>Stellenangebot: Android Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581879'>Stellenangebot: Android Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
@@ -358,7 +358,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/2bb269a4-4f95-435b-910e-a3c2a24aaf2d'>Xfers - Lead Android Engineer - Singapore</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/2bb269a4-4f95-435b-910e-a3c2a24aaf2d'>Xfers - Lead Android Engineer - Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -456,7 +456,7 @@ work on innovative mobile projects that would impact tens of millions of people'
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/shutterflyinc/job/oMF7afws'>Shutterfly Careers - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/shutterflyinc/job/oMF7afws'>Shutterfly Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
